force-app/main/default/objects/CC_Llamada__c/CC_Llamada__c.object-meta.xml
<CustomObject>
    <label>Llamada</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Llamada</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Llamadas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>