force-app/main/default/objects/CC_Llamada__c/fields/AV_Account__c.field-meta.xml
<CustomField>
    <fullName>AV_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al account identificado en la llamada que entra o desde donde se lanza la llamada. SFId o Numper.</description>
    <label>Cliente / Numper</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Llamadas (Cliente / Numper)</relationshipLabel>
    <relationshipName>LlamadasCTI</relationshipName>
    <type>Lookup</type>
</CustomField>