force-app/main/default/objects/CC_Llamada__c/fields/AV_Address__c.field-meta.xml
<CustomField>
    <fullName>AV_Address__c</fullName>
    <description>Información de la llamada.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>