force-app/main/default/objects/CC_Llamada__c/fields/AV_Duration__c.field-meta.xml
<CustomField>
    <fullName>AV_Duration__c</fullName>
    <description>Información de la llamada. Llegará en segundos.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Duración</label>
    <length>255</length>
    <type>Text</type>
</CustomField>