force-app/main/default/objects/CC_Llamada__c/fields/AV_DurationType__c.field-meta.xml
<CustomField>
    <fullName>AV_DurationType__c</fullName>
    <description>Nos indica si la llamada ha sido corta, media o larga dependiendo de los segundos que dure.</description>
    <label>Tipo duración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Larga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>