force-app/main/default/objects/CC_Llamada__c/fields/AV_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>AV_ExternalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id que identifica unívocamente a la llamada</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>