force-app/main/default/objects/CC_Llamada__c/fields/AV_FirstEmployee__c.field-meta.xml
<CustomField>
    <fullName>AV_FirstEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Es el primer gestor, al que se le realiza la llamada inicial.</description>
    <label>1er gestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>