force-app/main/default/objects/CC_Llamada__c/fields/AV_RingTime__c.field-meta.xml
<CustomField>
    <fullName>AV_RingTime__c</fullName>
    <description>Información de la llamada.</description>
    <label>Tiempo de ring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>