force-app/main/default/objects/CC_Llamada__c/fields/AV_State__c.field-meta.xml
<CustomField>
    <fullName>AV_State__c</fullName>
    <description>Información de la llamada.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respondida</fullName>
            </value>
            <value>
                <fullName>Perdida</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Descartada</fullName>
            </value>
            <value>
                <fullName>Reportada</fullName>
            </value>
            <value>
                <fullName>Gestionada</fullName>
            </value>
            <value>
                <fullName>No localizado</fullName>
            </value>
            <value>
                <fullName>No Gestionada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>