force-app/main/default/objects/CC_Llamada__c/fields/CC_Agente__c.field-meta.xml
<CustomField>
    <fullName>CC_Agente__c</fullName>
    <description>Nombre de usuario en Genesys</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>