force-app/main/default/objects/CC_Llamada__c/fields/CC_ANI__c.field-meta.xml
<CustomField>
    <fullName>CC_ANI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ANI</label>
    <type>Phone</type>
</CustomField>