force-app/main/default/objects/CC_Llamada__c/fields/CC_Asunto__c.field-meta.xml
<CustomField>
    <fullName>CC_Asunto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asunto</label>
    <type>TextArea</type>
</CustomField>