force-app/main/default/objects/CC_Llamada__c/fields/CC_Auditoria_IZO__c.field-meta.xml
<CustomField>
    <fullName>CC_Auditoria_IZO__c</fullName>
    <description>Indica la fecha en la que se ha marcado esta llamada para la auditoria IZO. Si no está informado, entonces no se audita.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Auditoría IZO (interno)</label>
    <type>Date</type>
</CustomField>