force-app/main/default/objects/CC_Llamada__c/fields/CC_Campana_Genesys__c.field-meta.xml
<CustomField>
    <fullName>CC_Campana_Genesys__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaña Genesys</label>
    <length>80</length>
    <type>Text</type>
</CustomField>