force-app/main/default/objects/CC_Llamada__c/fields/CC_Case_Consulta__c.field-meta.xml
<CustomField>
    <fullName>CC_Case_Consulta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso consultado</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Llamadas</relationshipLabel>
    <relationshipName>Llamadas</relationshipName>
    <type>Lookup</type>
</CustomField>