force-app/main/default/objects/CC_Llamada__c/fields/CC_Casos_Por_Agente__c.field-meta.xml
<CustomField>
    <fullName>CC_Casos_Por_Agente__c</fullName>
    <formula>IF(ISBLANK(CC_Agente__c), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casos Por Agente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>