force-app/main/default/objects/CC_Llamada__c/fields/CC_ConnId__c.field-meta.xml
<CustomField>
    <fullName>CC_ConnId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ConnId llamada</label>
    <length>40</length>
    <type>Text</type>
</CustomField>