force-app/main/default/objects/CC_Llamada__c/fields/CC_ConnId_Consulta__c.field-meta.xml
<CustomField>
    <fullName>CC_ConnId_Consulta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ConnId consulta</label>
    <length>40</length>
    <type>Text</type>
</CustomField>