force-app/main/default/objects/CC_Llamada__c/fields/CC_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CC_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (8 AND 9)) OR (7)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente, Cliente (Outbound), Cliente (CSBD), Cliente (COPS), Cliente (SACH)</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente, Cliente Particular</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Empleado, Empleado (HDT)</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Empleado (COPS)</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank, Buzón COPS</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>ReadOnly</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente (FRA)</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank, Cliente, Cliente Particular</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Llamadas</relationshipLabel>
    <relationshipName>Llamadas</relationshipName>
    <type>Lookup</type>
</CustomField>