force-app/main/default/objects/CC_Llamada__c/fields/CC_Datos_Genesys__c.field-meta.xml
<CustomField>
    <fullName>CC_Datos_Genesys__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos genesys</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>