force-app/main/default/objects/CC_Llamada__c/fields/CC_DNIS__c.field-meta.xml
<CustomField>
    <fullName>CC_DNIS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DNIS</label>
    <type>Phone</type>
</CustomField>