force-app/main/default/objects/CC_Llamada__c/fields/CC_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>CC_Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Servicio Genesys de encuesta al que se ha enviado al finalizar la llamada</description>
    <label>Encuesta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Servicio_Genesys__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Encuesta</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Servicio_Genesys__c</referenceTo>
    <relationshipLabel>Llamadas (Encuesta)</relationshipLabel>
    <relationshipName>Llamadas</relationshipName>
    <type>Lookup</type>
</CustomField>