force-app/main/default/objects/CC_Llamada__c/fields/CC_Encuesta_Valor_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Encuesta_Valor_2__c</fullName>
    <description>Respuesta a la segunda pregunta de la encuesta dada por el cliente y recogido en la IVR. Ante no-match/no-input, se escribe 99.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Encuesta valor 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>