force-app/main/default/objects/CC_Llamada__c/fields/CC_Encuesta_Valor_3__c.field-meta.xml
<CustomField>
    <fullName>CC_Encuesta_Valor_3__c</fullName>
    <description>Respuesta a la tercera pregunta de la encuesta dada por el cliente y recogido en la IVR. Ante no-match/no-input, se escribe 99.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Encuesta valor 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>