force-app/main/default/objects/CC_Llamada__c/fields/CC_Estado_Autenticacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Estado_Autenticacion__c</fullName>
    <formula>IF(
				ISPICKVAL(CC_Status_Autorizacion__c, &apos;DENIED&apos;), IMAGE(&quot;/resource/CC_Red&quot;,&apos;Rojo&apos;,15,15) + &apos; Autenticación denegada por sistema&apos;,
					IF(OR(ISPICKVAL(CC_Status_Autorizacion__c, &apos;PENDING&apos;),ISPICKVAL(CC_Status_Autorizacion__c, &apos;INPROGRESS&apos;)),
								IMAGE(&quot;/resource/CC_Red&quot;,&apos;Rojo&apos;,15,15) + &apos; Autenticación en curso&apos;,
IF(ISPICKVAL(CC_Status_Autorizacion__c, &apos;APPROVED&apos;),
											IMAGE(&quot;/resource/CC_Green&quot;,&apos;Verde&apos;,15,15) + &apos; Autenticación finalizada&apos;,
											IF(OR(ISPICKVAL(CC_Status_Autorizacion__c, &apos;ERROR&apos;),ISPICKVAL(CC_Status_Autorizacion__c, &apos;UNAUTHORIZED&apos;),ISPICKVAL(CC_Status_Autorizacion__c, &apos;TIMEOUT&apos;),ISPICKVAL(CC_Status_Autorizacion__c, &apos;ABORTED&apos;), ISPICKVAL(CC_Status_Autorizacion__c, &apos;EXPIRED&apos;), ISPICKVAL(CC_Status_Autorizacion__c, &apos;NOT_IDENTIFIED&apos;), ISPICKVAL(CC_Status_Autorizacion__c, &apos;NOTIFICATIONS_OFF&apos;)),
														IMAGE(&quot;/resource/CC_Orange&quot;,&apos;Naranja&apos;,15,15) + &apos; Autenticación no finalizada&apos;,
														IF(ISPICKVAL(CC_Status_Autorizacion__c, &apos;IS_A_COMPANY&apos;),
																	IMAGE(&quot;/resource/CC_Orange&quot;,&apos;Naranja&apos;,15,15) + &apos; Autenticación no finalizada (EMPRESA)&apos;,
																	IF(ISPICKVAL(CC_Status_Autorizacion__c, &apos;IS_MINOR&apos;),
																				IMAGE(&quot;/resource/CC_Orange&quot;,&apos;Naranja&apos;,15,15) + &apos; Autenticación no finalizada (MENOR)&apos;,
																				IF(ISPICKVAL(CC_Status_Autorizacion__c, &apos;SIN ESTADO&apos;),
																							IMAGE(&quot;/resource/CC_Orange&quot;,&apos;Naranja&apos;,15,15) + &apos; Autenticación pendiente&apos;,
																							IF(ISPICKVAL(CC_Status_Autorizacion__c, &apos;REJECTED&apos;),
																										IMAGE(&quot;/resource/CC_Orange&quot;,&apos;Naranja&apos;,15,15) + &apos; Autenticación rechazada por cliente&apos;,
																										IF(ISPICKVAL(CC_Status_Autorizacion__c, &apos;NOT_DIGITAL_OR_BLOCKED&apos;),
																													IMAGE(&quot;/resource/CC_Red&quot;,&apos;Rojo&apos;,15,15) + &apos; Sin contrato SAU / Identificador bloqueado&apos;,
																													IMAGE(&quot;/resource/CC_Orange&quot;,&apos;Naranja&apos;,15,15) + &apos; Autenticación pendiente&apos;
																												) 
																									)
																						)
																			)
																)
) 
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Autenticación</label>
    <type>Text</type>
</CustomField>