force-app/main/default/objects/CC_Llamada__c/fields/CC_Extension__c.field-meta.xml
<CustomField>
    <fullName>CC_Extension__c</fullName>
    <description>Extensión en Genesys</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Extensión</label>
    <length>10</length>
    <type>Text</type>
</CustomField>