force-app/main/default/objects/CC_Llamada__c/fields/CC_Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Fin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha fin</label>
    <type>DateTime</type>
</CustomField>