force-app/main/default/objects/CC_Llamada__c/fields/CC_Fecha_Grabacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Grabacion__c</fullName>
    <formula>LEFT(TEXT(CC_Fecha_Inicio__c),10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC_Fecha_Grabacion</label>
    <type>Text</type>
</CustomField>