force-app/main/default/objects/CC_Llamada__c/fields/CC_Id_Cognitivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_Cognitivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id Cognitivo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>