force-app/main/default/objects/CC_Llamada__c/fields/CC_IdentCliente__c.field-meta.xml
<CustomField>
    <fullName>CC_IdentCliente__c</fullName>
    <label>Identificación cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_IdentCliente</valueSetName>
    </valueSet>
</CustomField>