force-app/main/default/objects/CC_Llamada__c/fields/CC_Identificado_Manualmente__c.field-meta.xml
<CustomField>
    <fullName>CC_Identificado_Manualmente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identificado manualmente</label>
    <type>Checkbox</type>
</CustomField>