force-app/main/default/objects/CC_Llamada__c/fields/CC_Idioma__c.field-meta.xml
<CustomField>
    <fullName>CC_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>es</fullName>
                <label>Castellano</label>
            </value>
            <value>
                <fullName>ca</fullName>
                <label>Catalán</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>Inglés</label>
            </value>
            <value>
                <fullName>va</fullName>
                <label>Valenciano</label>
            </value>
            <value>
                <fullName>eu</fullName>
                <label>Euskera</label>
            </value>
            <value>
                <fullName>ga</fullName>
                <label>Gallego</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>