force-app/main/default/objects/CC_Llamada__c/fields/CC_Info_Denegacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Info_Denegacion__c</fullName>
    <description>US544984 - Journey Cognitve - Guardar la info de la denegación que nos llega del servicio</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Información Denegación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>