force-app/main/default/objects/CC_Llamada__c/fields/CC_Llamada_Padre__c.field-meta.xml
<CustomField>
    <fullName>CC_Llamada_Padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Llamada padre</label>
    <referenceTo>CC_Llamada__c</referenceTo>
    <relationshipLabel>Llamadas relacionadas</relationshipLabel>
    <relationshipName>CC_Llamada_Padre</relationshipName>
    <type>Lookup</type>
</CustomField>