force-app/main/default/objects/CC_Llamada__c/fields/CC_No_Identificado__c.field-meta.xml
<CustomField>
    <fullName>CC_No_Identificado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar a true si el cliente no se ha querido identificar.</description>
    <label>No identificado</label>
    <type>Checkbox</type>
</CustomField>