force-app/main/default/objects/CC_Llamada__c/fields/CC_Nombre_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Nombre_Empresa__c</fullName>
    <formula>Owner:User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre empresa</label>
    <type>Text</type>
</CustomField>