force-app/main/default/objects/CC_Llamada__c/fields/CC_NPS_Neutros__c.field-meta.xml
<CustomField>
    <fullName>CC_NPS_Neutros__c</fullName>
    <formula>IF(AND(VALUE(CC_Encuesta_Valor_1__c)&gt;=7,VALUE(CC_Encuesta_Valor_1__c)&lt;=8), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Neutros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>