force-app/main/default/objects/CC_Llamada__c/fields/CC_NPS_Nulos__c.field-meta.xml
<CustomField>
    <fullName>CC_NPS_Nulos__c</fullName>
    <formula>IF(VALUE(CC_Encuesta_Valor_1__c)=99, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Nulos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>