force-app/main/default/objects/CC_Llamada__c/fields/CC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso__c</fullName>
    <description>NumPerso asociada a la llamada</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>NumPerso asociada a la llamada</inlineHelpText>
    <label>NUMPERSO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>