force-app/main/default/objects/CC_Llamada__c/fields/CC_Perfil__c.field-meta.xml
<CustomField>
    <fullName>CC_Perfil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Perfil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>