force-app/main/default/objects/CC_Llamada__c/fields/CC_Prioridad_IZO__c.field-meta.xml
<CustomField>
    <fullName>CC_Prioridad_IZO__c</fullName>
    <defaultValue>0</defaultValue>
    <description>// 0-Sin prioridad
// 1-Mes pasado: -- / Mes actual: SI
// 2-Mes pasado: SI / Mes actual: NO
// 3-Mes pasado: NO / Mes actual: NO</description>
    <label>Prioridad IZO (interno)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>