force-app/main/default/objects/CC_Llamada__c/fields/CC_Representante__c.field-meta.xml
<CustomField>
    <fullName>CC_Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Representante asociado a la llamada</description>
    <label>Representante</label>
    <referenceTo>CC_Representante_Contrato__c</referenceTo>
    <relationshipLabel>Llamadas</relationshipLabel>
    <relationshipName>Llamadas</relationshipName>
    <type>Lookup</type>
</CustomField>