force-app/main/default/objects/CC_Llamada__c/fields/CC_Respuesta_Asistente__c.field-meta.xml
<CustomField>
    <fullName>CC_Respuesta_Asistente__c</fullName>
    <description>Se crea para proyectos relacionados a GENiaL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Respuesta del asistente</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>