force-app/main/default/objects/CC_Llamada__c/fields/CC_Resumen_AI__c.field-meta.xml
<CustomField>
    <fullName>CC_Resumen_AI__c</fullName>
    <description>Se crea para proyectos relacionados a GENiaL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resumen IA</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>