force-app/main/default/objects/CC_Llamada__c/fields/CC_Sentimiento__c.field-meta.xml
<CustomField>
    <fullName>CC_Sentimiento__c</fullName>
    <description>Se crea para proyectos relacionados a GENiaL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sentimiento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>