force-app/main/default/objects/CC_Llamada__c/fields/CC_Servicio_Genesys__c.field-meta.xml
<CustomField>
    <fullName>CC_Servicio_Genesys__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio Genesys</label>
    <referenceTo>CC_Servicio_Genesys__c</referenceTo>
    <relationshipLabel>Llamadas (Servicio Genesys)</relationshipLabel>
    <relationshipName>Llamadas1</relationshipName>
    <type>Lookup</type>
</CustomField>