force-app/main/default/objects/CC_Llamada__c/fields/CC_Servicio_Llamada_Saliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Servicio_Llamada_Saliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Servicio llamada saliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>