force-app/main/default/objects/CC_Llamada__c/fields/CC_Status_Autorizacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Status_Autorizacion__c</fullName>
    <description>Se utiliza este campo para guardar el estado de la autenticación que viene desde la llamada</description>
    <label>Status Autenticación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>UNAUTHORIZED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>TIMEOUT</fullName>
            </value>
            <value>
                <fullName>ABORTED</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>INPROGRESS</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>NOT_IDENTIFIED</fullName>
            </value>
            <value>
                <fullName>IS_MINOR</fullName>
            </value>
            <value>
                <fullName>IS_A_COMPANY</fullName>
            </value>
            <value>
                <fullName>NOT_DIGITAL_OR_BLOCKED</fullName>
            </value>
            <value>
                <fullName>NOTIFICATIONS_OFF</fullName>
            </value>
            <value>
                <fullName>SIN ESTADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>