force-app/main/default/objects/CC_Llamada__c/fields/CC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo__c</fullName>
    <label>Tipo de llamada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrante</fullName>
                <default>true</default>
                <label>Entrante</label>
            </value>
            <value>
                <fullName>Saliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>