force-app/main/default/objects/CC_Llamada__c/fields/CC_Tipo_Cierre__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Cierre__c</fullName>
    <label>Tipo de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Llamada finalizada</fullName>
            </value>
            <value>
                <fullName>Consulta cancelada</fullName>
                <label>Consulta atendida</label>
            </value>
            <value>
                <fullName>Consulta completada</fullName>
                <label>Consulta transferida</label>
            </value>
            <value>
                <fullName>Llamada no atendida</fullName>
            </value>
            <value>
                <fullName>Llamada transferida</fullName>
            </value>
            <value>
                <fullName>Llamada abandonada</fullName>
            </value>
            <value>
                <fullName>Consulta no atendida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>