force-app/main/default/objects/CC_Llamada__c/fields/CC_Tipo_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Servicio__c</fullName>
    <formula>TEXT(CC_Servicio_Genesys__r.CC_Tipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo servicio</label>
    <type>Text</type>
</CustomField>