force-app/main/default/objects/CC_Llamada__c/fields/CC_URL_Grabacion__c.field-meta.xml
<CustomField>
    <fullName>CC_URL_Grabacion__c</fullName>
    <formula>&quot;https://cccontent-pro1.cxbpro.objst1cd1.lacaixa.es/rest/&quot;+CC_Fecha_Grabacion__c+&quot;_&quot;+UPPER(CC_ConnId__c)+&quot;_&quot;+CC_Extension__c+&quot;.mp3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Grabación</label>
    <type>Text</type>
</CustomField>