force-app/main/default/objects/CC_Llamada__c/fields/HDT_Desborde__c.field-meta.xml
<CustomField>
    <fullName>HDT_Desborde__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para HDT</description>
    <label>Desborde</label>
    <type>Checkbox</type>
</CustomField>