force-app/main/default/objects/CC_Llamada__c/fields/HDT_Desborde_Gestionado__c.field-meta.xml
<CustomField>
    <fullName>HDT_Desborde_Gestionado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desborde gestionado</label>
    <type>Checkbox</type>
</CustomField>