force-app/main/default/objects/CC_Llamada__c/fields/KIN_Consulta__c.field-meta.xml
<CustomField>
    <fullName>KIN_Consulta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consulta</label>
    <type>Checkbox</type>
</CustomField>