force-app/main/default/objects/CC_Llamada__c/fields/KIN_Genesys_Cloud__c.field-meta.xml
<CustomField>
    <fullName>KIN_Genesys_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genesys Cloud</label>
    <type>Checkbox</type>
</CustomField>