force-app/main/default/objects/CC_Llamada__c/fields/KIN_Genesys_Cloud_URL_Grabacion__c.field-meta.xml
<CustomField>
    <fullName>KIN_Genesys_Cloud_URL_Grabacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Grabación Genesys Cloud</label>
    <type>Url</type>
</CustomField>