force-app/main/default/objects/CC_Llamada__c/fields/KIN_Llamada_Origen__c.field-meta.xml
<CustomField>
    <fullName>KIN_Llamada_Origen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Llamada origen</label>
    <type>Checkbox</type>
</CustomField>