force-app/main/default/objects/CC_Llamada__c/fields/OB_Campanya_Id__c.field-meta.xml
<CustomField>
    <fullName>OB_Campanya_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OB_Parametrizacion__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Campaña</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>OB_Parametrizacion__c</referenceTo>
    <relationshipLabel>Llamadas (Campaña)</relationshipLabel>
    <relationshipName>Llamadas1</relationshipName>
    <type>Lookup</type>
</CustomField>