force-app/main/default/objects/CC_Llamada__c/fields/OB_Centro_Gestor__c.field-meta.xml
<CustomField>
    <fullName>OB_Centro_Gestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Centro gestor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>