force-app/main/default/objects/CC_Llamada__c/fields/OB_Codigo_Contrato__c.field-meta.xml
<CustomField>
    <fullName>OB_Codigo_Contrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código de contrato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>