force-app/main/default/objects/CC_Llamada__c/fields/OB_Contacto_Numero_Documento__c.field-meta.xml
<CustomField>
    <fullName>OB_Contacto_Numero_Documento__c</fullName>
    <formula>CC_Contacto__r.CC_Numero_Documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de documento</label>
    <type>Text</type>
</CustomField>