force-app/main/default/objects/CC_Llamada__c/fields/OB_Datos_Adicionales__c.field-meta.xml
<CustomField>
    <fullName>OB_Datos_Adicionales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos adicionales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>